test/spec_vectors/load/fail/module_39.wat
(module (memory 1) (func (result i64) (i64.load32_u (f32.const 0))))